--- a/LGPL/Tools/log4cpp/lcu/src/Makefile
+++ b/LGPL/Tools/log4cpp/lcu/src/Makefile
@@ -19,7 +19,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, 
 # MA 02111-1307  USA
 #
-# "@(#) $Id: Makefile,v 1.2 2011/01/25 15:54:55 htischer Exp $"
+# "@(#) $Id: Makefile,v 1.3 2011/01/28 17:56:01 htischer Exp $"
 #
 # Makefile of log4cpp port to VxWorks
 #
@@ -29,18 +29,29 @@
 # htischer  25/01/11  sourcecodechange/patchcreation management
 #                     unified lcu and ws repository
 #					  !preliminary! still building for ws on lcu tree for build test
+# htischer  28/01/11  configure compile and create library for VxWorks (not yet linking),
+#					  install library, headers and doxygen documentation
+#					  build stabilizing.
+#					  exclude autom4te.cache from clean_dist.
 
 #*******************************************************************************
 # This Makefile follows VLT Standards (see Makefile(5) for more).
 #*******************************************************************************
 # REMARKS
+# make options:
+# DEBUG=on		for configure, activate debugging
 # make targets:
+#
+# all			Build. Do unpack, patch and configure if and only if necessary.
 #
 # clean_dist	Bring subtree in a state suitable for version control checkin.
 #				This includes also creating a new patch version in case of
 #				modifications in the extracted sourcecode.
 #
-# all			Build. Do unpack, patch and configure if and only if necessary.
+# clean_configure remove configure results, if they got created.
+#				Avoids doing a configure just to be able to do a distclean.
+#				Useful to start configure from scratch or checking current state
+#				before creating a new patch. 
 #
 # clean			Prepares for a clean rebuild, but leaves configure results.
 #
@@ -63,6 +74,36 @@
 # LOG4CPP_TAR = 1.0
 
 include ../../ws/src/common.Makefile
+
+#
+# Check for installation directories
+#
+# Initially this was tested only before configuring on rule execution.
+# But if the folder gets deleted in the meantime make install would not work anyway.
+# Therefore for simplification, do the check on every make run.
+# On INTLIST -
+# Don't check existence of folders, e.g. like .bash_profile.acs
+# Always use first folder
+# Use builtin make expansion instead of external tools.
+# INSTALL_DIR:=$(shell echo $(INTLIST) | awk 'BEGIN {FS=":"} {print $$1}')
+# INSTALL_DIR:=$(firstword $(subst :, ,$(INTLIST))))
+ifneq ($(INTROOT),) 
+   INSTALL_DIR:=$(INTROOT)
+else
+ifneq ($(INTLIST),) 
+   INSTALL_DIR:=$(firstword $(subst :, ,$(INTLIST)))
+else
+ifneq ($(ACSROOT),) 
+   INSTALL_DIR:=$(ACSROOT)
+else
+ifneq ($(VLTROOT),) 
+   INSTALL_DIR:=$(VLTROOT)
+else 
+   $(error No installation directories (INTROOT, INTLIST, ACSROOT, VLTROOT) have been found. Please define one and start again)
+endif
+endif
+endif
+endif
 
 # List of files to be linked
 LINK_FILES =
@@ -214,6 +255,127 @@ CSOURCENAMES = \
 #   include $(MAKEDIR)/acsMakefile
 #endif
 
+ifeq ($(DEBUG),)
+CONFIGURE_DEBUG=
+else
+CONFIGURE_DEBUG=--enable-debug
+endif
+
+
+# Workbench VxWorks Kernel Module Project options. Use for now instead of VLT/APEX options.
+#
+# For VLT/APEX compilation in particular add -mlongcall
+#
+# options for all link steps are expecting invokation through the ccppc compiler/linker driver, not directly ldppc
+# For loadable kernel modules,
+# First in the "intermediate link" step all module object files are linked together intermediately to a single object file,
+# then in the "munch" step a ctdt.c file gets created which covers invocation of file level C++ constructors/destructors,
+# then in the "ctdt" step, ctdt.c gets compiled with some special options,
+# then in the "final link" step, the intermediate object file and ctdt object get linked to the final loadable kernel module.
+# The "munch" step by Workbench VxWorks Kernel Module Project is done as follows:
+# nmppc $(infile) | tclsh $(WIND_BASE)/host/resource/hutils/tcl/munch.tcl -c ppc > $(outfile)
+# VLT and APEX builds are combining all 4 link steps to a single aequivalent procedure.
+# VLT and APEX do this differently:
+# VLT creates a matching nested make file on the fly
+# APEX calls a fixed pearl script with the necessary arguments to do all the steps
+#
+# Attention!
+# configure as of log4cpp unfortunately finds out the linker executable and calls it directly
+# without a chance to replacing it by something else.
+# Therefore in VxWorks the log4cpp autoconfigure can be only used for compilation, and linking must
+# be done separately.
+# Details:
+# configure uses an auto-generated ./libtool for compiling and linking which cannot be replaced.
+# For linking libtool gets passed the tool name $(CXXLD). CXXLD gets defined by */Makefile.in
+# */Makefile.in by autoconfigure is defined to be the compiler linker driver CXX=ccppc
+# autoconf result is part of the log4cpp package and cannot be changed because automake 1.10 etc 
+# is missing ALMA workstations. 
+#
+# Attention!
+# Since all modules are loaded into the single kernel process, libraries must be loaded only one time.
+# Otherwise it is not consistent which applications are using what instance of
+# static data and possibly code of different versions.
+# Either factor "shared" libraries out to a separate loadable kernel module, which gets loaded once,
+# or link all applications which have common libraries together to one a single loadable kernel module.
+#
+# Note:
+# For build diagnostics consider compiler options
+# -v     shows effective and intended include path and compiler options with implicite arguments
+#        and compiler version with integrated patches
+# -H     shows inclusion order of all used header files
+# -E -dM on empty file dumps predefined Macros
+
+# Compiling for Debugging or optimization for normal files and ctdt file
+# See configure.in: depending on --enable-debug, GCC_CFLAGS -g/-O added automatically
+# In addition, configure adds -D_DEBUG/-DNDEBUG
+#CFLAGS_OPTIMIZE+=-O2
+#CFLAGS_OPTIMIZE+=-g
+ifeq ($(DEBUG),)
+CFLAGS_OPTIMIZE=-fstrength-reduce -fno-builtin
+else
+CFLAGS_OPTIMIZE=
+endif
+
+# Common for all compilations, normal files and ctdt file
+# configure adds-ansi -MD -MP -Wall automatically. In addition it adds -Wno-unused -pedantic
+#CFLAGS_COMMON+=-Wall -ansi -MD -MP
+CFLAGS_COMMON=-mcpu=604 -mstrict-align -fno-implicit-fp \
+-I$(WIND_BASE)/target/h -I$(WIND_BASE)/target/h/wrn/coreip \
+-DCPU=PPC604 -DTOOL_FAMILY=gnu -DTOOL=gnu -D_WRS_KERNEL \
+-D_VSB_CONFIG_FILE=\"$(WIND_BASE)/target/lib/h/config/vsbConfig.h\"
+
+# compilation of ctdt file, C++ file level constructor/destructor list after the "munch" step
+# This is not covered by configure, therefore need to add those flags manually which normally
+# would be added by configure. But -ansi -MD -MP not needed for ctdt. Only add -Wall
+# CFLAGS_CTDT=$(filter-out -ansi -MD -MP,$(CFLAGS_CTDT))
+ifeq ($(DEBUG),)
+CFLAGS_OPTIMIZE_CTDT=-O2
+else
+CFLAGS_OPTIMIZE_CTDT=-g
+endif
+CFLAGS_CTDT=$(CFLAGS_OPTIMIZE_CTDT) $(CFLAGS_OPTIMIZE) $(CFLAGS_COMMON) -fdollars-in-identifiers -Wall
+
+# only for intermediate link for reuse result in later link step
+CFLAGS_LINKPARTIAL=
+
+# only for final link of downloable kernel module, picking up intermediate and munch results
+CFLAGS_LINKFINAL=-T $(WIND_BASE)/target/h/tool/gnu/ldscripts/link.OUT
+
+# common for both link steps 
+CFLAGS_LINK=-r -nostdlib -Wl,-X
+
+# -----
+
+# Final composition of options and commands for configure
+
+# C/C++ compiler options
+CFLAGS=$(CFLAGS_OPTIMIZE) $(CFLAGS_COMMON)
+CXXFLAGS=$(CFLAGS)
+
+#ccppc routes the request through to c++ppc when necessary by options or file type.
+#By convention with C++, VxWorks RTP and VLT/APEX for VxWorks Kernel are using c++ppc,
+#and Wind River builds for VxWorks Kernel are using ccppc
+#For now follow the Wind River VxWorks Kernel convention 
+#CXX=c++ppc
+CXX=ccppc
+CC=ccppc
+
+# Same Preprocessor for C and C++, behaviour adjustment by options and file type.
+CPP=cppppc
+CXXCPP=cppppc
+
+AR=arppc
+RANLIB=ranlibppc
+STRIP=stripppc
+
+#Not yet needed, but set to be correct in the auto-generated ./libtool
+#DLLTOOL not available for kernel modules in Vxworks
+DLLTOOL=echo
+OBJDUMP=objdumpppc
+AS=asppc
+NM=nmppc
+LD=ldppc
+
 #
 # TARGETS
 # -------
@@ -237,6 +399,24 @@ clean :
 	fi
 	@echo " . . . clean done"
 
+# Remove results of configure
+# Useful to rerun configure from scratch, or to check current state result before creating a new patch version
+# Can be done only if Makefile got created during configuration
+# Use Makefile existence as indicator.
+# Cannot use make dependency, to avoid creating files which immediately get deleted again.
+# Attention!
+# If a configure run breaks before creating the Makefile, the file tree is inconsistent!
+# In this case don't create a new patch untile configure was runing successfully!
+
+.PHONY : clean_configure
+clean_configure :
+	@echo ". . . clean_configure . . ."
+	@if [ -r log4cpp-$(LOG4CPP_VER)/Makefile ]; then \
+		echo $(MAKE) -C log4cpp-$(LOG4CPP_VER) distclean; \
+		$(MAKE) -C log4cpp-$(LOG4CPP_VER) distclean; \
+	fi
+	@echo " . . . clean_configure done"
+
 # Create a new patch version to reflect changes in the sourcecode.
 # Before that clean up the build of the package to the state of distribution (nested distclean)
 # No need to do a clean of the package, because done in turn of distclean.
@@ -248,35 +428,36 @@ clean :
 # For creating the patch use the make of the ws side.
 # Only if lcu side has no added files.
 # For this cleanup and check whether non-symlinks remain. If yes, request manual sync with ws.
+# Allow 0 sized files remaining, because they are anyway not incorporated into the patch.
 # Files deleted on lcu not checked.
-# To be able to run clean_dist on ws side, run configure first on ws side. This cannot be done on
-# "make patch" to not cluttering the copy of the ws files on the lcu side.
-# Skipping ws side configure on ws side if Makefile does not exist too dangerous - maybe cleaned up incompletely.
-# If the ws side of the package no longer exists this does no harm - on clean_dist lcu changes got checked in also.  
+# If the ws side of the package no longer exists this does no harm - on clean_dist lcu changes got checked in also.
+# Even if on lcu side package was not extracted, create patch on ws side if extracted - maybe local changes there.
+# Attention!
+# Danger if the wrong autom4te.cache makes it from the ws to the lcu side which runs with a different configuration.
+# autom4te.cache: Can be savely deleted. Created on certain configure steps. Turn off creation with one of
+# autom4te.cfg ~/.autom4te.cfg ./.autom4te.cfg :
+# begin-language: "Autoconf-without-aclocal-m4"
+# args: --no-cache
+# end-language: "Autoconf-without-aclocal-m4"
 
 #skip default acsMakefile things
 #clean_dist : clean_all clean_dist_all 
 .PHONY : clean_dist 
-clean_dist :
+clean_dist : clean_configure
 	@echo ". . . clean_dist . . ."
 	rm -f `find .. -name "*~"`
 	@if [ -d log4cpp-$(LOG4CPP_VER) ]; then \
-		echo $(MAKE) -C log4cpp-$(LOG4CPP_VER) distclean; \
-		$(MAKE) -C log4cpp-$(LOG4CPP_VER) distclean || exit 1; \
+		echo rm -rf log4cpp-$(LOG4CPP_VER)/autom4te.cache; \
+		rm -rf log4cpp-$(LOG4CPP_VER)/autom4te.cache; \
 		if [ $$(find log4cpp-$(LOG4CPP_VER) -type f 2>&1 | wc -l) != 0 ]; then \
 			echo ======== Error! ========; \
-			find ../../lcu/src/log4cpp-$(LOG4CPP_VER) -type f; \
+			find ../../lcu/src/log4cpp-$(LOG4CPP_VER) -type f -size 1; \
 			echo files added and missing in ../../ws/src/log4cpp-$(LOG4CPP_VER); \
-			echo either move to .../ws/... and place a symbolic link to them at corresponding location in .../lcu/...; \
-			echo or alternatively remove.; \
-			echo then run ''make configure'' and try again.; \
+			echo if file is required, move to .../ws/... and place a corresponding symbolic link to it in .../lcu/...; \
 			exit 1; \
 		fi; \
-		echo $(MAKE) -C ../../ws/src configure; \
-		$(MAKE) -C ../../ws/src configure; \
-		echo $(MAKE) -C ../../ws/src clean_dist; \
-		$(MAKE) -C ../../ws/src clean_dist; \
 	fi
+	$(MAKE) -C ../../ws/src clean_dist
 	rm -rf configure.log log4cpp-$(LOG4CPP_VER)
 	@echo " . . . clean_dist done"
 
@@ -292,12 +473,24 @@ man :
 db :
 	@echo " . . . ../DB done"
 
+# Installation location can be overwritten at 'make install' as well as at 'configure'.
+# See 'configure --help' and configure@"Installation directory options"
+# LCU installation in general set by --prefix=$(INSTALL_DIR)/vw
+# LCU binaries and libraries need to cover the CPU type also, therefore redirect separately
+# --bindir==$(INSTALL_DIR)/vw/bin/$(CPU) --libdir=$(INSTALL_DIR)/vw/lib/$(CPU)
+# Exception: Script log4cpp-config is meant for execution on host, but cannot be redirected
+# separately. Therefore move to $(INSTALL_DIR)/bin afterwards.
+
+#  go to $(INSTALL_DIR)/vw/bin/$(CPU) and $(INSTALL_DIR)/vw/lib/$(CPU)
+# Therefore o 
+ 
 #skip default acsMakefile things
 #install : install_all
 .PHONY : install 
 install : 
 	@echo ". . . installing cppunit . . ."
 	$(MAKE) -C log4cpp-$(LOG4CPP_VER) install
+	mv $(INSTALL_DIR)/vw/bin/$(CPU)/log4cpp-config $(INSTALL_DIR)/bin/log4cpp-config
 	@echo " . . . installation done"
 
 # Folder name of patched version of extracted tgz. Create only if not existing, therefore no dependencies.
@@ -307,6 +500,8 @@ install :
 # To be able to add lcu specific files to the lcu branch during configure and build,
 # do not link the entire subtree in one piece, but duplicate the folder structure
 # and 'ln -s' each file individually.
+# See comments at clean_dist: autom4te.cache is unnecessary and can pull in ws
+#  context when copied in. remove.
 # Note:
 # If ws clean_dist fails, because it was left behind half way through, run configure
 # on ws side or start over from scratch by manually deleting the folder, but manually
@@ -329,12 +524,15 @@ install :
 log4cpp-$(LOG4CPP_VER) :
 	$(MAKE) -C ../../ws/src clean_dist
 	$(MAKE) -C ../../ws/src patch
+	@echo ". . . replicating to ../../lcu/src . . ."
 	@for dir in $$(cd ../../ws/src; find log4cpp-1.0+ -type d); do \
 		echo mkdir -p $$dir; \
-		mkdir -p $$dir; \
+		mkdir -p $$dir || exit 1; \
 		echo ln -s -t $$dir $$(cd $$dir; find $$(sed -e "s#[^/]*#..#g" <<<$$dir )/../../ws/src/$$dir -maxdepth 1 -type f); \
-		ln -s -t $$dir $$(cd $$dir; find $$(sed -e "s#[^/]*#..#g" <<<$$dir )/../../ws/src/$$dir -maxdepth 1 -type f); \
+		ln -s -t $$dir $$(cd $$dir || exit 1; find $$(sed -e "s#[^/]*#..#g" <<<$$dir || exit 1)/../../ws/src/$$dir -maxdepth 1 -type f || exit 1) || exit 1; \
 	done
+	rm -rf log4cpp-$(LOG4CPP_VER)/autom4te.cache
+	@echo " . . . replicating to ../../lcu/src done"
 
 # pseudo target name is an alias of the patched folder name. Create as dependency.
 # unpack and cannot be a dependency of log4cpp-$(LOG4CPP_VER) but required, therefore
@@ -343,15 +541,23 @@ log4cpp-$(LOG4CPP_VER) :
 .PHONY : patch 
 patch : log4cpp-$(LOG4CPP_VER)
 
-
 # File name of one configure result. Created by configure.
 # Create only if not existing, therefore no dependencies.
-# Todo: Temporary treat lcu like ws to test the build
+# --enable-shared=no VxWorks kernel process supports only static libraries
+# --enable-debug optional
+# For destination locations see comment at "install" rule.
+
 log4cpp-$(LOG4CPP_VER)/Makefile :
 	@echo ". . . running configure . . ."
 	echo "   log4cpp tar file is: log4cpp-$(LOG4CPP_TAR).tar.gz" >configure.log
 	echo "   log4cpp version  is: $(LOG4CPP_VER)" >>configure.log
-	cd log4cpp-$(LOG4CPP_VER); ./configure --enable-shared --prefix=$(INSTALL_DIR) >>../configure.log 2>&1
+	cd log4cpp-$(LOG4CPP_VER); \
+		./configure --enable-shared=no $(CONFIGURE_DEBUG) --host=powerpc-wrs-vxworks \
+			--prefix=$(INSTALL_DIR)/vw --bindir=$(INSTALL_DIR)/vw/bin/$(CPU) --libdir=$(INSTALL_DIR)/vw/lib/$(CPU) \
+			CC=$(CC) CXX=$(CXX) CPP=$(CPP) CXXCPP=$(CXXCPP) AR=$(AR) RANLIB=$(RANLIB) STRIP=$(STRIP) \
+			OBJDUMP=$(OBJDUMP) AS=$(AS) NM=$(NM) LD=$(LD) DLLTOOL=$(DLLTOOL) \
+			"CFLAGS=$(CFLAGS)" "CXXFLAGS=$(CXXFLAGS)" \
+ 			>>../configure.log 2>&1
 	@echo " . . . configuration file created"
 
 # Do the configure only once if not done now. Use Makefile existence as indicator.
@@ -380,7 +586,7 @@ printenv:
 test :
 #	log4cpp-$(LOG4CPP_VER)/tests/testmain
 #	log4cpp-$(LOG4CPP_VER)/tests/testmain unknownarg
-	log4cpp-$(LOG4CPP_VER)/tests/testbench 10 5
+#	log4cpp-$(LOG4CPP_VER)/tests/testbench 10 5
 #	log4cpp-$(LOG4CPP_VER)/tests/testbench 10
 #	log4cpp-$(LOG4CPP_VER)/tests/testbench
 
