--- a/LGPL/Tools/log4cpp/ws/src/Makefile
+++ b/LGPL/Tools/log4cpp/ws/src/Makefile
@@ -1,6 +1,6 @@
 #*******************************************************************************
 #
-# "@(#) $Id: Makefile,v 1.6 2011/02/02 16:51:02 rtobar Exp $"
+# "@(#) $Id: Makefile,v 1.7 2011/02/11 17:33:36 htischer Exp $"
 #
 # Makefile of log4cpp
 #
@@ -19,7 +19,13 @@
 # htischer  28/01/11  clean_configure to clean up without creating a new patch
 #					  exclude autom4te.cache from patch.
 # htischer  31/01/11  moved INSTALL_DIR to common file
-#					  add build, install, exec of testcases  
+#					  add build, install, exec of testcases
+# rtobar    02/02/11  on 'make clean', internally also clean the configure results of log4cpp
+# htischer  11/02/11  Rename 'make clean' without rtobar change to 'make clean_build'
+#					  Rename 'make clean_configure' to 'make clean'
+#                     Touch the patched configure to making sure that it is
+#					  newer as the dependents and rebuilding scripts is not attempted.
+#					  Enhance testsuite, test log with preprocess for easier diff
 
 #*******************************************************************************
 # This Makefile follows VLT Standards (see Makefile(5) for more).
@@ -33,12 +39,12 @@
 #				This includes also creating a new patch version in case of
 #				modifications in the extracted sourcecode.
 #
-# clean_configure remove configure results, if they got created.
+# clean         remove configure results, if they got created.
 #				Avoids doing a configure just to be able to do a distclean.
 #				Useful to start configure from scratch or checking current state
 #				before creating a new patch. 
 #
-# clean			Prepares for a clean rebuild, but leaves configure results.
+# clean_build	Prepares for a clean rebuild, but leaves configure results.
 #
 # unpack		Unpack the original log4cpp package.
 #
@@ -93,7 +99,7 @@ SCRIPTS_L       =
 # Therefore do the build as separate step. Not available as separate pseudotarget.
 # List of testcases in log4cpp-$(LOG4CPP_VER)/tests/makefile.am not available before
 # unpacking and patching. Therefore delegate into sub-make to be invoked after this.
-# Need to treat 'make install' and 'make tests' special also. But 'make clean' already cleans the tests.
+# Need to treat 'make install' and 'make tests' special also. But 'make clean_build' already cleans the tests.
 .PHONY : all
 all: configure
 	@echo ". . . building . . ."
@@ -101,13 +107,17 @@ all: configure
 	$(MAKE) -f tests.Makefile all
 	@echo " . . . 'all' done" 
 
-.PHONY : clean 
-clean : 
-	@if [ -d log4cpp-$(LOG4CPP_VER) ]; then \
-		echo $(MAKE) -C log4cpp-$(LOG4CPP_VER) distclean; \
-		$(MAKE) -C log4cpp-$(LOG4CPP_VER) distclean; \
+# Clean only the build results, but keep the configure results.
+# For cleaning the configure results also, use 'make clean'.
+# For packaging everything ready for version control use 'make clean_dist'.
+
+.PHONY : clean_build 
+clean_build : 
+	@if [ -r log4cpp-$(LOG4CPP_VER)/Makefile ]; then \
+		echo $(MAKE) -C log4cpp-$(LOG4CPP_VER) clean; \
+		$(MAKE) -C log4cpp-$(LOG4CPP_VER) clean; \
 	fi
-	@echo " . . . clean done"
+	@echo " . . . clean_build done"
 
 # Remove results of configure
 # Useful to rerun configure from scratch, or to check current state result before creating a new patch version
@@ -118,19 +128,19 @@ clean :
 # If a configure run breaks before creating the Makefile, the file tree is inconsistent!
 # In this case don't create a new patch untile configure was runing successfully!
 
-.PHONY : clean_configure
-clean_configure :
-	@echo ". . . clean_configure . . ."
+.PHONY : clean
+clean :
+	@echo ". . . clean . . ."
 	@if [ -r log4cpp-$(LOG4CPP_VER)/Makefile ]; then \
 		echo $(MAKE) -C log4cpp-$(LOG4CPP_VER) distclean; \
 		$(MAKE) -C log4cpp-$(LOG4CPP_VER) distclean; \
 	fi
-	@echo " . . . clean_configure done"
+	@echo " . . . clean done"
 
 # Create a new patch version to reflect changes in the sourcecode.
 # Before that clean up the build of the package to the state of distribution (nested distclean)
 # Attention!
-# If configure failed previously, clean_configure or distclean cannot clean up appropriately!
+# If configure failed previously, clean or distclean cannot clean up appropriately!
 # Create a new patch version only if make configure was successful!
 # No need to do a clean of the package, because done in turn of distclean.
 # After creating a new patch, to be ready for checkin, rm also unpacked and patched subtrees
@@ -184,7 +194,7 @@ clean_configure :
 # - Or manually preserve all modified source files, remove patched folder,
 #   restore 'make patch' and manually preserved files.
 .PHONY : clean_dist 
-clean_dist : clean_configure
+clean_dist : clean
 	@echo ". . . clean_dist . . ."
 	rm -f `find .. -name "*~"`
 	@if [ -d log4cpp-$(LOG4CPP_VER) ]; then \
@@ -203,7 +213,7 @@ clean_dist : clean_configure
 		echo mv log4cpp-$(LOG4CPP_VER).patch.tmp log4cpp-$(LOG4CPP_VER).patch; \
 		mv -f log4cpp-$(LOG4CPP_VER).patch.tmp log4cpp-$(LOG4CPP_VER).patch; \
 	fi
-	rm -rf configure.log log4cpp-$(LOG4CPP_TAR) log4cpp-$(LOG4CPP_VER)
+	rm -rf log4cpp-$(LOG4CPP_TAR) log4cpp-$(LOG4CPP_VER) configure.log log4cpp_testmain.log log4cpp_teststimes.log log4cpp_tests.log
 	@echo " . . . clean_dist done"
 
 .PHONY : man
@@ -219,7 +229,7 @@ db :
 # Install the testcases also, see rule 'all'.
 .PHONY : install 
 install : 
-	@echo ". . . installing cppunit . . ."
+	@echo ". . . installing log4cpp . . ."
 	$(MAKE) -C log4cpp-$(LOG4CPP_VER) install
 	$(MAKE) -f tests.Makefile install
 	@echo " . . . installation done"
@@ -248,10 +258,23 @@ unpack : log4cpp-$(LOG4CPP_TAR)
 # Attention!
 # If patch is failing after folder creation but before completion it is not repeated!
 # Remove folder manually!
+#
+# Attention:
+# unnecessary execution of autoconf and automake or warning messages
+# 'missing --run automake-1.10', 'missing --run autoconf' etc
+# This means that a dependent file has a newer timestamp after unpacking and patching from the archive.
+# Non available autoconf tool is simulated by simply touching the dependent files.
+# See ./config/missing actions, and $(AUTOCONF) use in top Makfile to see when it is executed.
+# In particular $(top_srcdir)/m4/ACX_PTHREAD.m4 and configure got patched consistently.
+# configure must be newer.
+#
+
 log4cpp-$(LOG4CPP_VER) :
 	@echo ". . . patching . . ."
 	cp -Rp log4cpp-$(LOG4CPP_TAR) $@
 	cd $@; patch -p1 < ../log4cpp-$(LOG4CPP_VER).patch
+	sleep 2
+	touch log4cpp-$(LOG4CPP_VER)/configure
 	@echo " . . . patch applied"
 
 # pseudo target name is an alias of the patched folder name. Create as dependency.
@@ -289,23 +312,51 @@ configure : patch log4cpp-$(LOG4CPP_VER)/Makefile
 printenv:
 	env | sort
 
-# Usage 
-# testmain, 10000 iterations.
-# optional 1st argument: unknown meaning. Hangs.
-# testbench, 12 iterations.
-# optional 1st argument: records per iteration, default=100
-# optional 2nd argument: record size, default=128
+# Run the predefined testsuite and extra tests of noinst_PROGRAMS
 #
-# Run the the individual testcases also, see rule 'all'.
-# 'make check' already available, also builds if not present.
-.PHONY : test 	
-test :
-#	log4cpp-$(LOG4CPP_VER)/tests/testmain
-#	log4cpp-$(LOG4CPP_VER)/tests/testmain unknownarg
-	log4cpp-$(LOG4CPP_VER)/tests/testbench 10 5
-#	log4cpp-$(LOG4CPP_VER)/tests/testbench 10
-#	log4cpp-$(LOG4CPP_VER)/tests/testbench
-	$(MAKE) -C log4cpp-$(LOG4CPP_VER) check
-	@echo " . . . test done"
+# testmain [-n <count>] [<filename>]
+#  once per second write into syslog (/var/log/messages) if available, otherwise to stdout.
+#  -n : iterations, default 10000. After 10 iterations reopen the log file.
+#  filename: additional log, default stdout
+#  (using neither syslog nor filename, results in two times logging to stdout)
+# testbench [<count> [<size>]]
+# Benchmark with timing.
+# count: records per iteration, default=100
+# size: size per record, default=128
+# Environment variable CLOCK_USE_CPU to use CPU timestamp instead of posix clock (not calibrated to usec!)
+#
+# 'make check' runs a testsuite defined by the package. Also builds, if not already done.
+# testConfig and testPropertyConfig need additional files in current folder, see make install
+# testbench needs redirection of stderr to have output in order
+# redirect test output into file
+# For easier diff of results remove time stamps
+# log4cpp_tests.log
+# testmain appends to the log, therefore delete log4cpp_testmain.log before test to get consistent result.
+.PHONY : tests 	
+tests :
+	@echo "{...tests...} 2>&1 | tee log4cpp_teststimes.log"
+	@{ \
+	echo $(MAKE) -C log4cpp-$(LOG4CPP_VER) check; \
+	$(MAKE) -C log4cpp-$(LOG4CPP_VER) check; \
+	echo log4cpp-$(LOG4CPP_VER)/tests/testmain -n 21; \
+	log4cpp-$(LOG4CPP_VER)/tests/testmain -n 21; \
+	echo rm -f log4cpp_testmain.log; \
+	rm -f log4cpp_testmain.log; \
+	echo log4cpp-$(LOG4CPP_VER)/tests/testmain -n 21 log4cpp_testmain.log; \
+	log4cpp-$(LOG4CPP_VER)/tests/testmain -n 21 log4cpp_testmain.log; \
+	echo cat log4cpp_testmain.log; \
+	cat log4cpp_testmain.log; \
+	echo log4cpp-$(LOG4CPP_VER)/tests/testbench 10 5; \
+	log4cpp-$(LOG4CPP_VER)/tests/testbench 10 5; \
+	} 2>&1 | tee log4cpp_teststimes.log
+	sed \
+	-e "s/[0-9][0-9][0-9][0-9]-[0-9][0-9]-[0-9][0-9]/XXXX-XX-XX/" \
+	-e "s/[0-9][0-9]:[0-9][0-9]:[0-9][0-9],[0-9][0-9][0-9]/XX:XX:XX,XXX/" \
+	-e "s/[0-9][0-9] [A-Z][A-Za-z][A-Za-z] [0-9][0-9][0-9][0-9]/XX XXX XXXX/" \
+	-e "s/[0-9][0-9]:[0-9][0-9]:[0-9][0-9].[0-9][0-9][0-9]/XX:XX:XX.XXX/" \
+	-e "s/[0-9][0-9]*\.*[0-9]* us/XX.XX us/" \
+	-e "s/^[0-9][0-9][0-9][0-9]*/XXX/" \
+	log4cpp_teststimes.log > log4cpp_tests.log
+	@echo " . . . tests done"
 
 #___oOo___
